# AgentChrome

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  sdlc-config.json
.claude/: sdlc-state.json
.claude/steering/: retrospective-state.json  retrospective.md  structure.md  tech.md
.codex/steering/: retrospective-state.json
.github/workflows/: ci.yml  release.yml
docs/: claude-code.md  codex.md
examples/: CLAUDE.md.example
man/: agentchrome-dom-children.1  agentchrome-dom-events.1  agentchrome-dom-get-attribute.1  agentchrome-dom-get-html.1  agentchrome-dom-get-style.1  agentchrome-dom-get-text.1  agentchrome-dom-parent.1  agentchrome-dom-remove.1  agentchrome-dom-select.1  agentchrome-dom-set-attribute.1  agentchrome-dom-set-style.1  agentchrome-dom-set-text.1  agentchrome-dom-siblings.1  agentchrome-dom-tree.1  agentchrome-dom.1  agentchrome-script-run.1  agentchrome-script.1  agentchrome.1
specs/bug-fix-clap-validation-json-stderr/: feature.gherkin  requirements.md
specs/bug-fix-form-fill-textarea/: design.md  (+3 more)
src/: audit.rs  capabilities.rs  capabilities_cli.rs  config.rs  connection.rs  console.rs  cookie.rs  dialog.rs  dom.rs  emulate.rs  error.rs  examples.rs  examples_data.rs  form.rs  frame.rs  interact.rs  js.rs  lib.rs  main.rs  man_enrichment.rs  media.rs  navigate.rs  network.rs  output.rs  page.rs  perf.rs  session.rs  skill.rs  skill_check.rs  snapshot.rs  tabs.rs
steering/: product.md  retrospective.md  structure.md  tech.md
tests/: bdd.rs  cdp_integration.rs
xtask/: Cargo.toml
(+621 files in other folders)
